[gd_scene load_steps=17 format=2]

[ext_resource path="res://imagens/feedback/TelaFinalSitu1.png" type="Texture" id=1]
[ext_resource path="res://imagens/feedback/Botão.png" type="Texture" id=2]
[ext_resource path="res://cenas/feedback/feedback.gd" type="Script" id=3]
[ext_resource path="res://cenas/transicoes/transicao_shaders.tscn" type="PackedScene" id=4]
[ext_resource path="res://fontes/Xolonium-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://imagens/menu/Captura_de_tela_2023-02-08_142458-removebg-preview_resized.png" type="Texture" id=6]
[ext_resource path="res://imagens/menu/image-removebg-preview_resized.png" type="Texture" id=7]
[ext_resource path="res://imagens/menu/Captura_de_tela_2023-02-08_140340-removebg-preview_resized (2).png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=2]
size = 13
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 13
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 13
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 13
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]
size = 22
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 22
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=8]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 5 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -3.0
margin_top = 1.0
margin_right = 1197.0
margin_bottom = 601.0
rect_scale = Vector2( 0.85532, 0.987299 )
texture = ExtResource( 1 )

[node name="pergunta" type="Label" parent="TextureRect"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 414.0
margin_top = 125.0
margin_right = 653.0
margin_bottom = 238.0
custom_fonts/font = SubResource( 2 )
text = "teste"
autowrap = true

[node name="explicacao" type="Label" parent="TextureRect"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 663.0
margin_top = 120.0
margin_right = 904.0
margin_bottom = 267.0
custom_fonts/font = SubResource( 3 )
text = "teste"
autowrap = true

[node name="resposta" type="Label" parent="TextureRect"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 413.88
margin_top = 242.075
margin_right = 650.88
margin_bottom = 334.075
custom_fonts/font = SubResource( 4 )
text = "A)abcdef-- +2pts"
autowrap = true

[node name="pontuação" type="Label" parent="TextureRect"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 414.0
margin_top = 334.0
margin_right = 789.0
margin_bottom = 357.0
custom_fonts/font = SubResource( 5 )
autowrap = true

[node name="Transition" parent="." instance=ExtResource( 4 )]
visible = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureButton" type="TextureButton" parent="CanvasLayer"]
margin_left = 652.0
margin_top = 264.0
margin_right = 780.0
margin_bottom = 392.0
texture_normal = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 344.0
margin_top = 75.0
margin_right = 776.0
margin_bottom = 368.0

[node name="Label" type="Label" parent="ColorRect"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 32.0
margin_top = 8.0
margin_right = 364.0
margin_bottom = 220.0
custom_fonts/font = SubResource( 6 )
text = "Parabéns, você alcançou a posição de Rei da Fibra! |Clique no botão abaixo para obter um feedback de sua jornada."
align = 1
valign = 1
autowrap = true

[node name="Label3" type="Label" parent="ColorRect"]
visible = false
modulate = Color( 0, 0, 0, 1 )
margin_left = 94.0
margin_top = 12.0
margin_right = 314.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 7 )
text = "Obrigado por Jogar"

[node name="Label2" type="Label" parent="ColorRect"]
visible = false
modulate = Color( 0, 0, 0, 1 )
margin_left = 61.0
margin_top = 45.0
margin_right = 350.0
margin_bottom = 197.0
custom_fonts/font = SubResource( 8 )
text = "Agora você esta livre para sair do jogo, vo.tar ao menu principal e recomeçar ou voltar para o jogo e explorar o mapa. "
align = 1
valign = 1
autowrap = true

[node name="código_vtal" type="TextureButton" parent="ColorRect"]
visible = false
margin_left = 122.0
margin_top = 164.0
margin_right = 418.0
margin_bottom = 272.0
rect_scale = Vector2( 0.569301, 0.652678 )
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 6 )

[node name="Label" type="Label" parent="ColorRect/código_vtal"]
margin_left = 39.0
margin_top = 41.0
margin_right = 265.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 1 )
text = "CÓDIGO DE ÉTICA"

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect"]
visible = false
margin_left = 17.0
margin_top = 201.0
margin_right = 913.0
margin_bottom = 309.0
rect_scale = Vector2( 0.466979, 0.634199 )

[node name="Sair" type="TextureButton" parent="ColorRect/HBoxContainer"]
margin_right = 296.0
margin_bottom = 108.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 6 )

[node name="Label" type="Label" parent="ColorRect/HBoxContainer/Sair"]
margin_left = 104.93
margin_top = 39.4199
margin_right = 330.93
margin_bottom = 68.4199
custom_fonts/font = SubResource( 1 )
text = "SAIR"

[node name="menu" type="TextureButton" parent="ColorRect/HBoxContainer"]
margin_left = 300.0
margin_right = 596.0
margin_bottom = 108.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 6 )

[node name="Label" type="Label" parent="ColorRect/HBoxContainer/menu"]
margin_left = 96.1637
margin_top = 39.4199
margin_right = 322.164
margin_bottom = 68.4199
custom_fonts/font = SubResource( 1 )
text = "MENU"

[node name="mapa" type="TextureButton" parent="ColorRect/HBoxContainer"]
margin_left = 600.0
margin_right = 896.0
margin_bottom = 108.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 6 )

[node name="Mapa" type="Label" parent="ColorRect/HBoxContainer/mapa"]
margin_left = 93.8217
margin_top = 37.843
margin_right = 349.822
margin_bottom = 66.843
custom_fonts/font = SubResource( 1 )
text = "MAPA"

[connection signal="pressed" from="CanvasLayer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="ColorRect/código_vtal" to="." method="_on_cdigo_vtal_pressed"]
[connection signal="pressed" from="ColorRect/HBoxContainer/Sair" to="." method="_on_Sair_pressed"]
[connection signal="pressed" from="ColorRect/HBoxContainer/menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="ColorRect/HBoxContainer/mapa" to="." method="_on_mapa_pressed"]
